# wc_gtsam

./: CMakeLists.txt  README.md  package.xml
scripts/.ipynb_checkpoints/: SFMdata-checkpoint.ipynb  Untitled-checkpoint.ipynb  VisualISAM2Example-checkpoint.ipynb
scripts/examples/: ImuFactorExample2.py  Untitled.ipynb  Untitled1.ipynb  VisualISAM2Example.py
scripts/examples/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb
src/: Pose2SLAMExample_node.cpp  VisualISAM2Example_node.cpp  imufactorsexample_node.cpp  wc_gtsam_node.cpp
